修正下拉菜单自动宽度的bug

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h3>百度搜索</h3>
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="input-group">
+                    <div class="input-group" style="width: 300px;">
                         <input type="text" class="form-control" id="baidu">
                         <div class="input-group-btn">
                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
@@ -71,7 +71,7 @@
             <h3>淘宝搜索</h3>
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="input-group">
+                    <div class="input-group" style="width: 400px;">
                         <input type="text" class="form-control" id="taobao">
                         <div class="input-group-btn">
                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
