1. 增加多个参数配置，使用更灵活 2. 增加 ajax 数据请求成功时事件触发（dataRequestSuccess） 3. 修复部分 BUG

--- a/README.html
+++ b/README.html
@@ -1000,15 +1000,15 @@ body .markdown-body
   }
 }
 </style><title>README</title></head><body><article class="markdown-body"><p><a href="http://lzw.me"><img alt="Code Climate" src="http://lzw.me/images/logo.png" /></a></p>
-<h1 id="bootstrap-search-suggest-v001"><a name="user-content-bootstrap-search-suggest-v001" href="#bootstrap-search-suggest-v001" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>Bootstrap Search Suggest - v0.0.1</h1>
+<h1 id="bootstrap-search-suggest"><a name="user-content-bootstrap-search-suggest" href="#bootstrap-search-suggest" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>Bootstrap Search Suggest</h1>
 <p><a href="http://lzw.me/pages/demo/bootstrap-suggest-plugin">Demo|示例</a> </p>
 <p>这是一个基于 bootstrap 按钮式下拉菜单组件的搜索建议插件，必须使用于按钮式下拉菜单组件上。</p>
 <h2 id="_1"><a name="user-content-_1" href="#_1" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>功能说明</h2>
 <ul>
-<li>搜索方式：从 data.value 的所有字段数据中查询 keyword 的出现，或字段数据包含于 keyword 中</li>
+<li>搜索方式：从 data.value 的有效字段数据中查询 keyword 的出现，或字段数据包含于 keyword 中</li>
 <li>支持单关键字、多关键字的输入搜索建议，多关键字可自定义分隔符</li>
-<li>支持按 data 数据搜索、按  URL 请求搜索和按首次请求URL数据并缓存搜索三种方式【getDataMethod】</li>
-<li>单关键字会设置输入框内容和 data-id 两个值，以 indexId 和 indexKey 取值 data 数据的次序为准；多关键字只设置输入框值</li>
+<li>支持按 data 数组数据搜索、按  URL 请求搜索和按首次请求URL数据并缓存搜索三种方式【getDataMethod】</li>
+<li>单关键字会设置 data-id 和输入框内容两个值，以 indexId/idField 和 indexKey/idFiled 取值 data 的数据为准；多关键字只设置输入框值</li>
 </ul>
 <h2 id="_2"><a name="user-content-_2" href="#_2" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>快速上手</h2>
 <ol>
@@ -1022,43 +1022,60 @@ body .markdown-body
 </code></pre>
 
 <p>具体使用请参考参数配置说明及demo 示例页面源码(<a href="http://lzw.me/pages/demo/bootstrap-suggest-plugin">Demo</a>)</p>
-<h4 id="_3"><a name="user-content-_3" href="#_3" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>方法参考</h4>
+<h4 id="_3"><a name="user-content-_3" href="#_3" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>方法调用</h4>
 <ol>
 <li>禁用提示： <code>$("input#test").bsSuggest("disable");</code></li>
 <li>启用提示： <code>$("input#test").bsSuggest("enable");</code></li>
 <li>销毁插件： <code>$("input#test").bsSuggest("destroy");</code></li>
 </ol>
-<h2 id="_4"><a name="user-content-_4" href="#_4" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>参数说明</h2>
+<h4 id="_4"><a name="user-content-_4" href="#_4" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>事件监听</h4>
+<pre><code>dataRequestSuccess: 当  AJAX 请求数据成功时触发，并传回结果到第二个参数
+</code></pre>
+<pre><code class="js">$(&quot;input#test&quot;).on(&quot;dataRequestSuccess&quot;, function(event, result){ console.log(result); });
+</code></pre>
+
+<h2 id="_5"><a name="user-content-_5" href="#_5" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>配置参数</h2>
 <p>参数列表中的值均为插件默认值</p>
 <pre><code class="js">{
-    url: null,
+    url: null, //请求数据的 URL 地址
     jsonp: null, //设置此参数名，将开启jsonp功能，否则使用json数据结构
-    data: {},
+    data: {
+        value: [
+            {'id':'0','word':'lzw','description':'http://lzw.me'},
+            {'id':'1','word':'lzwme','description':'http://w.lzw.me'},
+            {'id':'2','word':'meizu','description':'http://www.meizu.com'},
+            {'id':'3','word':'flyme','description':'http://flyme.meizu.com'}
+        ]
+    },
     getDataMethod: &quot;firstByUrl&quot;, //获取数据的方式，url：一直从url请求；data：从 options.data 获取；firstByUrl：第一次从Url获取全部数据
-    indexId: 0, //data.value 的第几个数据，作为input输入框的 data-id，设为 -1 则不设置此值
-    indexKey: 0, //data.value 的第几个数据，作为input输入框的内容
-    effectiveFields: null, //data 中有效的字段，非有效字段都会过滤，默认全部，对自定义getData方法无效  TODO
+    indexId: 0, //每组数据的第几个数据，作为input输入框的 data-id，设为 -1 且 idField 为空则不设置此值
+    indexKey: 0, //每组数据的第几个数据，作为input输入框的内容
+    idField: &quot;&quot;, //每组数据的哪个字段作为 data-id，优先级高于 indexId 设置（推荐）
+    keyField: &quot;&quot;, //每组数据的哪个字段作为输入框内容，优先级高于 indexKey 设置（推荐）
+    effectiveFields: [], //data 中有效的字段数组，非有效字段都会过滤，默认全部，对自定义getData方法无效  TODO
+    effectiveFieldsAlias: {userName: &quot;姓名&quot;}, //有效字段的别名对象，用于 header 的显示
+    showHeader: false, //是否显示选择列表的 header，默认有效字段大于一列时显示，否则不显示
     allowNoKeyword: true, //是否允许无关键字时请求数据
     multiWord: false, //以分隔符号分割的多关键字支持
-    separator: &quot; &quot;, //多关键字支持时的分隔符，默认为空格
-    processData: processData, //格式化数据的方法
+    separator: &quot;,&quot;, //多关键字支持时的分隔符，默认为半角逗号
+    processData: processData, //格式化数据的方法，返回数据格式参考 data 参数
     getData: getData, //获取数据的方法
     autoMinWidth: false, //是否自动最小宽度，设为 false 则最小宽度与下拉式菜单等齐
     inputWarnColor: &quot;rgba(255,0,0,.1)&quot;, //输入框内容不是下拉列表选择时的警告色
-    listStyle: {&quot;max-height&quot;: &quot;375px&quot;, &quot;max-width&quot;: &quot;800px&quot;, &quot;overflow&quot;: &quot;auto&quot;}, //列表的样式控制
+    listStyle: {&quot;padding-top&quot;:0, &quot;max-height&quot;: &quot;375px&quot;, &quot;max-width&quot;: &quot;800px&quot;, &quot;overflow&quot;: &quot;auto&quot;, &quot;width&quot;: &quot;auto&quot;}, //列表的样式控制
     listHoverStyle: 'background: #07d; color:#fff', //提示框列表鼠标悬浮的样式
     listHoverCSS: &quot;jhover&quot;, //提示框列表鼠标悬浮的样式名称
-    keyLeft: 37,    //向左方向键
-    keyUp: 38,      //向上方向键
-    keyRight: 39,   //向右方向键
-    keyDown: 40,    //向下方向键
-    keyEnter: 13    //回车键
+    keyLeft: 37, //向左方向键
+    keyUp: 38, //向上方向键
+    keyRight: 39, //向右方向键
+    keyDown: 40, //向下方向键
+    keyEnter: 13 //回车键
 }
 </code></pre>
 
-<h2 id="_5"><a name="user-content-_5" href="#_5" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>使用示例</h2>
+<h2 id="_6"><a name="user-content-_6" href="#_6" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>使用示例</h2>
 <p>请参考 index.html 文件源代码，提供了自定义数据、URL 请求数据、百度搜索API、淘宝搜索API的接口演示。</p>
-<h2 id="_6"><a name="user-content-_6" href="#_6" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>二次开发</h2>
+<h2 id="_7"><a name="user-content-_7" href="#_7" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>二次开发</h2>
 <ol>
 <li><code>npm install grunt-cli -g</code></li>
 <li><code>npm install</code></li>
@@ -1070,5 +1087,5 @@ body .markdown-body
 <li>Make your feature addition or bug fix.</li>
 <li>Send me a pull request. Bonus points for topic branches.</li>
 </ul>
-<h2 id="_7"><a name="user-content-_7" href="#_7" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>设计制作</h2>
+<h2 id="_8"><a name="user-content-_8" href="#_8" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>设计制作</h2>
 <p>该插件由<a href="http://lzw.me">志文工作室</a>开发和维护.</p></article></body></html>
