--- a/index.html
+++ b/index.html
@@ -98,14 +98,20 @@
     var testBsSuggest = $("#test").bsSuggest({
         //url: "/rest/sys/getuserlist?keyword={keyword}",
         //url: "/rest/taskAction/ownerList?q={keyword}",
-        url: "/rest/sys/getuserlist",
-        //url: "data.json?q={keyword}",
+        //url: "/rest/sys/getuserlist",
+        url: "data.json?q={keyword}",
         //url: "userlists.json?q={keyword}",
         effectiveFields: ["userName"],
         /*indexId: -1,
         indexKey: 0,*/
         idField: "userId",
         keyField: "userName"
+    }).on('onDataRequestSuccess', function (e, result) {
+    	console.log('onDataRequestSuccess: ', result);
+    }).on('onSetSelectValue', function (e, keyword) {
+    	console.log('onSetSelectValue: ', keyword);
+    }).on('onUnsetSelectValue', function (e) {
+    	console.log("onUnsetSelectValue");
     });
 
 	//data 数据中获取
